--- a/app-config.json
+++ b/app-config.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "ZaUI Coffee",
+    "title": "Go Appscript Ecommerce",
     "headerColor": "",
     "textColor": "black",
     "statusBarColor": "#ffffff",
