--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zaui-coffee",
   "private": true,
   "version": "1.1.0",
-  "description": "ZaUI Coffee",
+  "description": "Go Appscript ECommerce",
   "repository": "",
   "license": "UNLICENSED",
   "browserslist": [
@@ -22,10 +22,12 @@
   "dependencies": {
     "@react-spring/web": "^9.6.1",
     "@types/lodash": "^4.14.191",
+    "axios": "^1.5.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.8.2",
     "recoil": "^0.7.7",
     "swiper": "^9.1.0",
@@ -33,6 +35,7 @@
     "zmp-ui": "^1.6.0-rc.6"
   },
   "devDependencies": {
+    "@types/node": "^20.8.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
