--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.8.2",
     "recoil": "^0.7.7",
+    "styled-components": "^6.1.0",
     "swiper": "^9.1.0",
+    "twin.macro": "^3.4.0",
+    "vite-plugin-babel-macros": "^1.0.6",
     "zmp-sdk": "^2.27.2",
     "zmp-ui": "^1.6.0-rc.6"
   },
@@ -47,7 +51,7 @@
     "postcss-cli": "^8.3.1",
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.58.3",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.5",
     "vite": "^2.6.14",
     "vite-tsconfig-paths": "^4.0.5"
   }
