--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/lodash": "^4.14.191",
     "axios": "^1.5.1",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
