--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-loading": "^2.0.3",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.8.2",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.0",
