--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "luxon": "^3.4.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-loading": "^2.0.3",
     "react-paginate": "^8.2.0",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.8.2",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.0",
